--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body{
   background: linear-gradient(65deg,  #000000, #201f1f, #000000);
 }
 
+
 nav{
   display: flex;
   justify-content: space-around;
@@ -235,8 +236,8 @@ nav{
   background-image: url(../images/churrascometro.png);
 }
 
-.img_petHealth{
-  background-image: url(../images/petHealth.png);
+.img_gameDonatella{
+  background-image: url(../images/gameDonatella.png);
 }
 
 .img_projetoAno{
@@ -322,8 +323,8 @@ footer h4{
   body{
     overflow-x: hidden;
   }
-
   .whatsapp{
+    z-index: 2;
     display: block;
   } 
 
@@ -333,11 +334,11 @@ footer h4{
     top: 55px;
     right: 0;
     width: 100%;
-    height: 250px;
+    height: 100%;
     background: linear-gradient(to right, #494378, #3d3858);
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
   }
@@ -345,6 +346,7 @@ footer h4{
 
 
   .nav-list.active{
+    z-index: 1;
     display: flex;
     transform: translateX(0);
   }
@@ -360,7 +362,7 @@ footer h4{
   }
 
   .nav-list li{
-    margin-left: 0;
+    margin: 20px 0;
     opacity: 0;
   }
 
