--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,8 @@ small {
   border-radius: 50%;
 }
 
+
+
 .my-projects > h2{
   color: #fae88d;
   text-align: center;
@@ -156,6 +158,7 @@ small {
   background-color: #ffffff;
   color: #000000;
   box-shadow: -3px -3px 30px 3px pink, 3px 3px 30px 3px blue;
+  transform: perspective(500px) rotateX(10deg);
 }
 
 .ReposData > h3{
