--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,6 @@ body{
   }   
 }
 
-abbr{
-  text-decoration: none;
-}
-
 nav{
   display: flex;
   justify-content: flex-end;
@@ -94,6 +90,7 @@ nav{
   justify-content: center;
   align-items: center;
   text-align: justify;
+  margin-top: 70px;
 }
 
 .first-box h1{
@@ -103,16 +100,13 @@ nav{
 .first-box h4{
   color: #fae88d;
   font-size: 30px;
+  margin-bottom: 20px;
 }
 
-.first-box h4 + p{
+.first-box > p{
   text-indent: 2rem;
+  margin: 5px 0;
 }
-
-.first-box p{
-  margin: 2rem 0 0.5rem 0;
-}
-
 .first-box img{
   margin-top: 25px;
 }
@@ -210,12 +204,10 @@ small {
 
 #technologies{
   width: 100%;
-  min-height: 600px;
+  min-height: 400px;
   display: flex;
   justify-content: space-evenly;
   background-color: #ffffff;
-  color: #000000;
-  border-radius: 10px;
   margin: 80px 0;
 }
 
@@ -229,10 +221,14 @@ small {
 
 .tech-box1 img{
   width: 80%;
+  max-width: 600px;
 }
 
 .tech-box2{
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   align-self: center;
   text-align: center;
 }
@@ -240,16 +236,21 @@ small {
 .tech-box2 h2{
   color: #261f54;
   font-size: 3rem;
-}
-
-.tech-box2 p{
-  margin: 2px 0 40px 0;
+  margin: 12px 0;
 }
 
 
 .tech-box2 img{
   border-radius: 10px;
-  margin: 5px;
+  margin: 8px;
+}
+
+.tech-box2 div {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -257,12 +258,14 @@ small {
   position: fixed;
   bottom: 30px;
   right: 30px;
+  z-index: 1000;
 }
 
 .top{
   position: fixed;
   bottom: 85px;
   right: 30px;
+  z-index: 1000;
 }
 
 footer{
@@ -293,6 +296,18 @@ footer a{
 
 footer a img{
   margin: 10px 5px;
+}
+
+.hidden_left, .hidden_footer {
+  opacity: 0;
+  transform: translateX(-50px);
+  transition: opacity 2s, transform 2s;
+}
+
+.hidden_right {
+  opacity: 0;
+  transform: translateX(50px);
+  transition: opacity 2s, transform 2s;
 }
 
 @media (max-width: 930px){
@@ -402,6 +417,7 @@ footer a img{
   }
 
   .tech-box1 img{
+    width: 100%;
     min-width: 250px;
     max-width: 450px;
     margin-bottom: 30px;
@@ -415,7 +431,7 @@ footer a img{
   }
 
   .tech-box2 img{
-    margin: 5px 0;
+    margin: 8px;
   }
 
 
