--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,7 @@ footer a img{
     align-items: center;
     margin: 30px 0;
     min-height: 1200px;
+    justify-content: flex-end;
   }
 
   .first-box{
