--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@ main{
   border-radius: 5px;
 }
 
+.unselected{
+  filter: grayscale(100%);
+}
+
 .first-box{
   width: 50%;
   min-height: 800px;
